	  SSL session handling, reading and writing in SSL connections for the 
	  qore Socket class
	* now Socket::connect() and Socket::accept() will throw exceptions if
	  they fail (before they would just return -1) - this is to be 
	  consistent with connectSSL() and acceptSSL() which will throw 
	  exceptions if SSL negotiation fails

2006.06.14: David Nichols
	* updated the tibco module to use a more efficient MDate constructor, 
	  without the need to convert the date info to a string first
	* changes to allow qore to compile and link with TIBCO SDK 5.3.*

2006.06.13: David Nichols
	* sanitized QoreString constructor order when specifying an encoding,
	  added an additional constructor to accept simply specifying the 
	  encoding without giving an initial string value
	* added regex substring extraction operator: =~ x/.../ - returns a list
	  of matched substrings
	* fixed a bug parsing empty data elements in an XML-RPC array

2006.06.12: David Nichols
	* improved XML string serialization to output short empty elements (i.e.
	  <node/>) if the hash has no real members, even if it has 
	  ^attributes^ and/or ^value^ keys, with or without actual values

*** v0.5.1 *** RELEASE

2006.06.07: David Nichols
	* migrated to subversion on sourceforge.net
	* implemented transliteration operator with ranges, i.e.:
		$str =~ tr/abc/123/;
		$str =~ tr/a-z/A-Z/;
	* added transliteration tests to test/test.q

2006.06.06: David Nichols
	* removed support for building non-threading version of Qore (was broken
	  anyway for a long time)
	* implemented better XML tests in test/test.q, removed redundant and not
	  very useful test/namespace.q test/xml-test2.q test/xml-test3.q, and
	  test/program-test.q
	* changed getByte() so it also works on strings

2006.06.04: David Nichols
	* fixed substr() to be multi-byte character set encoding aware to assume
	  that all offsets are character positions instead of byte offsets.