@@ -20,6 +20,8 @@
   Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 */
 
+// FIXME: fix stupid race condition with the getSocket() calls
+
 #include <qore/config.h>
 #include <qore/common.h>
 #include <qore/QC_Socket.h>
@@ -1460,54 +1462,113 @@ static QoreNode *SOCKET_isDataAvailable(class Object *self, class QoreNode *para
    return rv;
 }
 
+static QoreNode *SOCKET_getSSLCipherName(class Object *self, class QoreNode *params, ExceptionSink *xsink)
+{
+   class mySocket *s = (mySocket *)self->getReferencedPrivateData(CID_SOCKET);
+   QoreNode *rv;
+
+   if (s)
+   {
+      const char *str = s->getSSLCipherName();
+      rv = str ? new QoreNode(str) : NULL;
+      s->deref();
+   }
+   else
+   {
+      rv = NULL;
+      alreadyDeleted(xsink, "Socket::getSSLCipherName");
+   }
+   return rv;
+}
+
+static QoreNode *SOCKET_getSSLCipherVersion(class Object *self, class QoreNode *params, ExceptionSink *xsink)
+{
+   class mySocket *s = (mySocket *)self->getReferencedPrivateData(CID_SOCKET);
+   QoreNode *rv;
+
+   if (s)
+   {
+      const char *str = s->getSSLCipherVersion();
+      rv = str ? new QoreNode(str) : NULL;
+      s->deref();
+   }
+   else
+   {
+      rv = NULL;
+      alreadyDeleted(xsink, "Socket::getSSLCipherVersion");
+   }
+   return rv;
+}
+
+static QoreNode *SOCKET_isSecure(class Object *self, class QoreNode *params, ExceptionSink *xsink)
+{
+   class mySocket *s = (mySocket *)self->getReferencedPrivateData(CID_SOCKET);
+   QoreNode *rv;
+
+   if (s)
+   {
+      rv = new QoreNode(s->isSecure());
+      s->deref();
+   }
+   else
+   {
+      rv = NULL;
+      alreadyDeleted(xsink, "Socket::isSecure");
+   }
+   return rv;
+}
+
 class QoreClass *initSocketClass()
 {
    tracein("initSocketClass()");
 
    class QoreClass *QC_SOCKET = new QoreClass(strdup("Socket"));
    CID_SOCKET = QC_SOCKET->getID();
-   QC_SOCKET->addMethod("constructor",      SOCKET_constructor);
-   QC_SOCKET->addMethod("destructor",       SOCKET_destructor);
-   QC_SOCKET->addMethod("copy",             SOCKET_constructor);
-   QC_SOCKET->addMethod("connect",          SOCKET_connect);
-   QC_SOCKET->addMethod("connectSSL",       SOCKET_connectSSL);
-   QC_SOCKET->addMethod("bind",             SOCKET_bind);
-   QC_SOCKET->addMethod("accept",           SOCKET_accept);
-   QC_SOCKET->addMethod("acceptSSL",        SOCKET_acceptSSL);
-   QC_SOCKET->addMethod("listen",           SOCKET_listen);
-   QC_SOCKET->addMethod("send",             SOCKET_send);
-   QC_SOCKET->addMethod("sendBinary",       SOCKET_sendBinary);
-   QC_SOCKET->addMethod("sendi1",           SOCKET_sendi1);
-   QC_SOCKET->addMethod("sendi2",           SOCKET_sendi2);
-   QC_SOCKET->addMethod("sendi4",           SOCKET_sendi4);
-   QC_SOCKET->addMethod("sendi8",           SOCKET_sendi8);
-   QC_SOCKET->addMethod("sendi2LSB",        SOCKET_sendi2LSB);
-   QC_SOCKET->addMethod("sendi4LSB",        SOCKET_sendi4LSB);
-   QC_SOCKET->addMethod("sendi8LSB",        SOCKET_sendi8LSB);
-   QC_SOCKET->addMethod("recv",             SOCKET_recv);
-   QC_SOCKET->addMethod("recvBinary",       SOCKET_recvBinary);
-   QC_SOCKET->addMethod("recvi1",           SOCKET_recvi1);
-   QC_SOCKET->addMethod("recvi2",           SOCKET_recvi2);
-   QC_SOCKET->addMethod("recvi4",           SOCKET_recvi4);
-   QC_SOCKET->addMethod("recvi8",           SOCKET_recvi8);
-   QC_SOCKET->addMethod("recvi2LSB",        SOCKET_recvi2LSB);
-   QC_SOCKET->addMethod("recvi4LSB",        SOCKET_recvi4LSB);
-   QC_SOCKET->addMethod("recvi8LSB",        SOCKET_recvi8LSB);
-   QC_SOCKET->addMethod("sendHTTPMessage",  SOCKET_sendHTTPMessage);
-   QC_SOCKET->addMethod("sendHTTPResponse", SOCKET_sendHTTPResponse);
-   QC_SOCKET->addMethod("readHTTPHeader",   SOCKET_readHTTPHeader);
-   QC_SOCKET->addMethod("getPort",          SOCKET_getPort);
-   QC_SOCKET->addMethod("close",            SOCKET_close);
-   QC_SOCKET->addMethod("shutdown",         SOCKET_shutdown);
-   QC_SOCKET->addMethod("shutdownSSL",      SOCKET_shutdownSSL);
-   QC_SOCKET->addMethod("getSocket",        SOCKET_getSocket);
-   QC_SOCKET->addMethod("setSendTimeout",   SOCKET_setSendTimeout);
-   QC_SOCKET->addMethod("setRecvTimeout",   SOCKET_setRecvTimeout);
-   QC_SOCKET->addMethod("getSendTimeout",   SOCKET_getSendTimeout);
-   QC_SOCKET->addMethod("getRecvTimeout",   SOCKET_getRecvTimeout);
-   QC_SOCKET->addMethod("getCharset",       SOCKET_getCharset);
-   QC_SOCKET->addMethod("setCharset",       SOCKET_setCharset);
-   QC_SOCKET->addMethod("isDataAvailable",  SOCKET_isDataAvailable);
+   QC_SOCKET->addMethod("constructor",         SOCKET_constructor);
+   QC_SOCKET->addMethod("destructor",          SOCKET_destructor);
+   QC_SOCKET->addMethod("copy",                SOCKET_constructor);
+   QC_SOCKET->addMethod("connect",             SOCKET_connect);
+   QC_SOCKET->addMethod("connectSSL",          SOCKET_connectSSL);
+   QC_SOCKET->addMethod("bind",                SOCKET_bind);
+   QC_SOCKET->addMethod("accept",              SOCKET_accept);
+   QC_SOCKET->addMethod("acceptSSL",           SOCKET_acceptSSL);
+   QC_SOCKET->addMethod("listen",              SOCKET_listen);
+   QC_SOCKET->addMethod("send",                SOCKET_send);
+   QC_SOCKET->addMethod("sendBinary",          SOCKET_sendBinary);
+   QC_SOCKET->addMethod("sendi1",              SOCKET_sendi1);
+   QC_SOCKET->addMethod("sendi2",              SOCKET_sendi2);
+   QC_SOCKET->addMethod("sendi4",              SOCKET_sendi4);
+   QC_SOCKET->addMethod("sendi8",              SOCKET_sendi8);
+   QC_SOCKET->addMethod("sendi2LSB",           SOCKET_sendi2LSB);
+   QC_SOCKET->addMethod("sendi4LSB",           SOCKET_sendi4LSB);
+   QC_SOCKET->addMethod("sendi8LSB",           SOCKET_sendi8LSB);
+   QC_SOCKET->addMethod("recv",                SOCKET_recv);
+   QC_SOCKET->addMethod("recvBinary",          SOCKET_recvBinary);
+   QC_SOCKET->addMethod("recvi1",              SOCKET_recvi1);
+   QC_SOCKET->addMethod("recvi2",              SOCKET_recvi2);
+   QC_SOCKET->addMethod("recvi4",              SOCKET_recvi4);
+   QC_SOCKET->addMethod("recvi8",              SOCKET_recvi8);
+   QC_SOCKET->addMethod("recvi2LSB",           SOCKET_recvi2LSB);
+   QC_SOCKET->addMethod("recvi4LSB",           SOCKET_recvi4LSB);
+   QC_SOCKET->addMethod("recvi8LSB",           SOCKET_recvi8LSB);
+   QC_SOCKET->addMethod("sendHTTPMessage",     SOCKET_sendHTTPMessage);
+   QC_SOCKET->addMethod("sendHTTPResponse",    SOCKET_sendHTTPResponse);
+   QC_SOCKET->addMethod("readHTTPHeader",      SOCKET_readHTTPHeader);
+   QC_SOCKET->addMethod("getPort",             SOCKET_getPort);
+   QC_SOCKET->addMethod("close",               SOCKET_close);
+   QC_SOCKET->addMethod("shutdown",            SOCKET_shutdown);
+   QC_SOCKET->addMethod("shutdownSSL",         SOCKET_shutdownSSL);
+   QC_SOCKET->addMethod("getSocket",           SOCKET_getSocket);
+   QC_SOCKET->addMethod("setSendTimeout",      SOCKET_setSendTimeout);
+   QC_SOCKET->addMethod("setRecvTimeout",      SOCKET_setRecvTimeout);
+   QC_SOCKET->addMethod("getSendTimeout",      SOCKET_getSendTimeout);
+   QC_SOCKET->addMethod("getRecvTimeout",      SOCKET_getRecvTimeout);
+   QC_SOCKET->addMethod("getCharset",          SOCKET_getCharset);
+   QC_SOCKET->addMethod("setCharset",          SOCKET_setCharset);
+   QC_SOCKET->addMethod("isDataAvailable",     SOCKET_isDataAvailable);
+   QC_SOCKET->addMethod("getSSLCipherName",    SOCKET_getSSLCipherName);
+   QC_SOCKET->addMethod("getSSLCipherVersion", SOCKET_getSSLCipherVersion);
+   QC_SOCKET->addMethod("isSecure",            SOCKET_isSecure);
 
    traceout("initSocketClass()");
    return QC_SOCKET;
